--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <h1>My React Projects</h1>
   <ul>
-    <li><a href="Project-1">Project 1</a></li>
-    <li><a href="Project-2">Project 2</a></li>
+    <li><a href="Project-1/index.html">Project 1</a></li>
+    <li><a href="Project-2/index.html">Project 2</a></li>
   </ul>
 </body>
 </html>
