--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My React Projects</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
   <header>
-    <h1>My React Projects</h1>
+    <h1>🚀 My React Projects</h1>
     <p>Click on any project below to preview its output:</p>
   </header>
 
@@ -15,13 +16,13 @@
     <div class="card">
       <h2>Project 1</h2>
       <div class="btn-group">
-        <a href="Project-1/index.html" class="btn btn-view-project">View Project</a>
+        <a href="Project-1/index.html" class="btn btn-view-project">🔍 View Project</a>
       </div>
     </div>
     <div class="card">
       <h2>Project 2</h2>
       <div class="btn-group">
-        <a href="Project-2/index.html" class="btn btn-view-project">View Project</a>
+        <a href="Project-2/index.html" class="btn btn-view-project">🔍 View Project</a>
       </div>
     </div>
   </div>
