--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My React Projects</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <title>Welcome to My Projects</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>🚀 My React Projects</h1>
+    <h1>🚀 Welcome to My Projects</h1>
     <p>Click on any project below to preview its output:</p>
   </header>
 
-  <div class="container">
-    <div class="card">
+  <div class="projects-container">
+    <div class="project-card">
       <h2>Project 1</h2>
-      <div class="btn-group">
-        <a href="Project-1/index.html" class="btn btn-view-project">🔍 View Project</a>
-      </div>
+      <a href="Project-1/index.html" class="btn btn-view">View Project</a>
+      <a href="https://github.com/yourusername/React-projects/tree/main/Project-1" class="btn btn-source" target="_blank">View Source Code</a>
     </div>
-    <div class="card">
+
+    <div class="project-card">
       <h2>Project 2</h2>
-      <div class="btn-group">
-        <a href="Project-2/index.html" class="btn btn-view-project">🔍 View Project</a>
-      </div>
+      <a href="Project-2/index.html" class="btn btn-view">View Project</a>
+      <a href="https://github.com/yourusername/React-projects/tree/main/Project-2" class="btn btn-source" target="_blank">View Source Code</a>
     </div>
+
+    <!-- Add more projects as needed -->
   </div>
 </body>
 </html>
